@@ -286,6 +286,77 @@ name|id
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Constructs a TaskID object from given {@link JobID}.    * @param jobId JobID that this tip belongs to    * @param isMap whether the tip is a map    * @param id the tip number    */
+annotation|@
+name|Deprecated
+DECL|method|TaskID (JobID jobId, boolean isMap, int id)
+specifier|public
+name|TaskID
+parameter_list|(
+name|JobID
+name|jobId
+parameter_list|,
+name|boolean
+name|isMap
+parameter_list|,
+name|int
+name|id
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|jobId
+argument_list|,
+name|isMap
+condition|?
+name|TaskType
+operator|.
+name|MAP
+else|:
+name|TaskType
+operator|.
+name|REDUCE
+argument_list|,
+name|id
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Constructs a TaskInProgressId object from given parts.    * @param jtIdentifier jobTracker identifier    * @param jobId job number    * @param isMap whether the tip is a map    * @param id the tip number    */
+annotation|@
+name|Deprecated
+DECL|method|TaskID (String jtIdentifier, int jobId, boolean isMap, int id)
+specifier|public
+name|TaskID
+parameter_list|(
+name|String
+name|jtIdentifier
+parameter_list|,
+name|int
+name|jobId
+parameter_list|,
+name|boolean
+name|isMap
+parameter_list|,
+name|int
+name|id
+parameter_list|)
+block|{
+name|this
+argument_list|(
+operator|new
+name|JobID
+argument_list|(
+name|jtIdentifier
+argument_list|,
+name|jobId
+argument_list|)
+argument_list|,
+name|isMap
+argument_list|,
+name|id
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|TaskID ()
 specifier|public
 name|TaskID
